--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,27 @@ ul {
 .pagination-container li:hover {
   cursor: pointer;
 }
+
+/*  NEW */
+.order-item {
+  display: flex;
+  align-items: baseline;
+  gap: 5px;
+  margin-bottom: 5px;
+}
+
+.order-item img {
+  width: 40px;
+}
+
+.rating-options-container {
+  display: flex;
+  gap: 3px;
+}
+
+.cancel-review-btn {
+  border: 1px solid gray;
+  width: 60px;
+  text-align: center;
+  padding-top: 3px;
+}
