--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
-
+:root {
+    font-size: 62.5%;
+    font-family: sans-serif;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
