--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,13 @@ header {
   height: 6rem;
 }
 
-ul {
-  list-style-type: none;
-  display: flex;
-}
-
 .logo-ul {
-  padding-left: .9rem;
+  padding-left: 0.9rem;
 }
 
 .links-ul {
-  gap: .5rem;
-  padding-right: .9rem;
+  gap: 0.5rem;
+  padding-right: 0.9rem;
 }
 
 .links-ul,
@@ -82,38 +77,6 @@ footer {
 
 /*BELOW HAS TO BE PUT IN APPROPRIATE CSS FILES*/
 
-.genres-container {
-  display: flex;
-  gap: 15px;
-}
-
-.books-container {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-.single-book-container {
-  width: 250px;
-  border: 1px solid gray;
-  padding: 5px;
-}
-
-.pagination-container {
-  display: flex;
-  gap: 5px;
-}
-
-.pagination-container li {
-  border-bottom: 1px solid gray;
-  color: rgb(44, 77, 125);
-}
-
-.pagination-container li:hover {
-  cursor: pointer;
-}
-
-/*  NEW */
 .order-item {
   display: flex;
   align-items: baseline;
