--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,10 @@
 .home-container {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
+    min-height: 55rem;
+    height: 80vh;
+    max-width: 38rem;
+    margin: 0 auto;
 }
 
 .home-book-container {
