--- a/src/pages/notFound/notFound.css
+++ b/src/pages/notFound/notFound.css
@@ -1,3 +1,7 @@
+.notFound-container {
+    min-height: 55rem;
+    height: 80vh;
+}
 .notFound-msg {
     text-align: center;
     padding-top: 15rem;
