--- a/src/components/deleteBook/deleteBook.css
+++ b/src/components/deleteBook/deleteBook.css
@@ -4,21 +4,18 @@
   margin-top: 1rem;
   padding: 1.5rem;
   line-height: 1.4;
-  border: 1px solid gray;
-}
-
-.deleteBook-msg {
-  color: rgb(30, 111, 62);
-  margin-bottom: 0.5rem;
+  color: #454545;
+  text-align: center;
+  background-color: white;
+  border: 1px solid rgb(233, 231, 231);
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .deleteBook-btns-container {
   display: flex;
   justify-content: center;
   gap: 1rem;
-  margin-top: 1rem;
-}
-
-.deleteBook-btn {
-  width: 6rem;
+  margin-top: 2rem;
 }
