--- a/src/components/bookCard/bookCard.css
+++ b/src/components/bookCard/bookCard.css
@@ -1,28 +1,25 @@
 .bookCard-container {
-  width: 25rem;
-  height: 53rem;
-  height: 50rem;
-  margin: auto;
-  padding: 0.5rem;
+  width: 28rem;
+  height: 45rem;
+  margin-bottom: 0.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1rem;
+  cursor: pointer;
 }
 
-.bookCard-cover-container {
-  margin: auto;
-  width: 90%;
-  margin-top: 1rem;
-}
-
-.bookCard-container .bookCard-cover {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 100%;
+.bookCard-cover {
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+  margin: 1rem auto 1.5rem auto;
+  width: 59%;
 }
 
 .bookCard-title {
   font-size: 2rem;
   line-height: 1.2;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
