--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -3,7 +3,7 @@
   justify-content: center;
   gap: 1rem;
   margin-top: 4rem;
-  margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pagination-li:hover {
