--- a/src/pages/books/books.css
+++ b/src/pages/books/books.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   line-height: 1.7;
-  margin: 2.5rem 1rem 0 1rem;
+  margin: 0 1rem;
+  padding-top: 2.5rem;
   padding-left: 4rem;
 }
 
@@ -18,7 +19,8 @@
 @media only screen and (min-width: 550px) {
   .books-genres-container {
     line-height: 0.1;
-    margin: 3rem 2rem 0 2rem;
+    margin: 0 2rem;
+    padding-top: 3rem;
     padding-left: 0;
     display: flex;
     justify-content: center;
