--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -1,50 +1,51 @@
 .checkout-container-complete {
-    min-height: 55rem;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
+  min-height: 55rem;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
 }
 .checkout-page-container {
-    padding: 3.5rem 1rem;
-    width: fit-content;
+  padding: 3.5rem 1rem;
+  width: fit-content;
 }
 .checkout-totalPrice {
-    border-top: 1px solid black;
-    width: fit-content;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  border-top: 1px solid black;
+  width: fit-content;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .checkout-buy-now-div {
-    width: fit-content;
+  width: fit-content;
 }
 .checkout-totalPrice,
 .checkout-buy-now-div {
-    margin-left: auto;
+  margin-left: auto;
 }
 .checkout-totalPrice-div,
 .checkout-buy-now-div {
-    padding-right: 1rem;
+  padding-right: 1rem;
 }
 .checkout-totalPrice-div {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 .checkout-address-p {
-    padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
 }
 .checkout-address {
-    padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .form-container {
-    width: fit-content;
-    padding: 2rem 0;
+  width: fit-content;
+  padding: 2rem 0;
 }
 .checkout-container .checkout-input {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .form-fieldset {
-    padding: 1rem;
+  padding: 1rem;
+  background-color: #fff;
 }
 .checkout-label {
-    padding-right: .5rem;
+  padding-right: 0.5rem;
 }
