--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -1,9 +1,14 @@
 .pagination-container {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.8rem;
   margin-top: 4rem;
   padding-bottom: 1.5rem;
+}
+
+.pagination-li {
+  font-size: 1.6rem;
+  padding: 0 1px;
 }
 
 .pagination-li:hover {
@@ -11,5 +16,6 @@
 }
 
 .pagination-active-link {
-  border-bottom: 1px solid gray;
+  color: #4c321d;
+  border-bottom: 2px solid #7e4e1f;
 }
