adds toaster for sumbitting/editing a review

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ header {
   height: 10vh;
 }
 
+.active {
+  font-weight: bold;
+}
+
 .logos {
   font-weight: 400;
 }
@@ -115,5 +119,3 @@ footer {
 }
 
 /*BELOW HAS TO BE PUT IN APPROPRIATE CSS FILES*/
-
-
