--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,6 @@ a {
   color: inherit; /* check if all should inherit */
 }
 
-/* *** active NAV-links *** */
-.active {
-  font-weight: bold;
-}
-
 /* *** shared styles on the books-pages *** */
 .books-container {
   display: flex;
@@ -65,13 +60,13 @@ a {
  */
 
 .update-delete-book-msg {
-  font-weight: bold;
-  padding-top: 4px;
+  padding: 3px 2px 1px 2px;
   margin-bottom: 0.5rem;
   background-color: #f2f0ec;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   text-align: center;
+  line-height: 1.4;
 }
 
 /* *** BTNS *** */
@@ -123,5 +118,9 @@ a {
 @media only screen and (min-width: 768px) {
   body {
     font-size: 1.6rem;
+  }
+
+  .update-delete-book-msg {
+    font-size: 1.5rem;
   }
 }
