--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,37 +1,40 @@
 .home-container {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
-    min-height: 55rem;
-    height: 80vh;
-    max-width: 38rem;
-    margin: 0 auto;
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+  min-height: 55rem;
+  height: 80vh;
+  max-width: 38rem;
+  margin: 0 auto;
 }
 
 .home-book-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  padding: 3rem 2rem;
+  margin-top: 1rem;
 }
 
 .home-name,
 .home-p-one,
 .home-p-two {
-    padding-left: 2rem;
+  padding-left: 2rem;
 }
 
 .home-p-two {
-    font-size: 1.7rem;
+  font-size: 1.7rem;
 }
 
 .home-name {
-    padding-bottom: 2.5rem;
-    font-size: 2.5rem;
+  padding-bottom: 2.5rem;
+  font-size: 2.5rem;
 }
 .home-p-one {
-    padding-bottom: 1rem;
-    font-size: 1.9rem;
+  padding-bottom: 1rem;
+  font-size: 1.9rem;
 }
 
 .home-grid {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
