--- a/src/components/updateBook/updateBook.css
+++ b/src/components/updateBook/updateBook.css
@@ -55,3 +55,21 @@
   color: #7e4e1f;
   padding: 4px 0;
 }
+
+@media only screen and (min-width: 650px) {
+  .updateBook-container {
+    margin-left: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .updateBook-container {
+    margin-left: 3rem;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  .updateBook-container {
+    margin-left: 4rem;
+  }
+}
