--- a/src/components/deleteBook/deleteBook.css
+++ b/src/components/deleteBook/deleteBook.css
@@ -1,6 +1,12 @@
+@media only screen and (max-width: 649px) {
+  .deleteBook-container {
+    margin: auto;
+    margin-top: 1rem;
+  }
+}
+
 .deleteBook-container {
   width: 32rem;
-  margin: auto;
   margin-top: 1rem;
   padding: 1.5rem;
   line-height: 1.4;
@@ -19,13 +25,6 @@
   gap: 1rem;
   margin-top: 2rem;
 }
-
-@media only screen and (min-width: 650px) {
-  .deleteBook-container {
-    margin-left: 0;
-  }
-}
-
 @media only screen and (min-width: 768px) {
   .deleteBook-container {
     margin-left: 3rem;
