--- a/src/pages/singleBook/singleBook.css
+++ b/src/pages/singleBook/singleBook.css
@@ -83,7 +83,111 @@
 
 @media only screen and (min-width: 1080px) {
   .singleBook-page {
-    grid-template-columns: auto auto;
+    grid-singleBook-page {
+      margin: 4.5rem 3rem 0 3rem;
+      padding-bottom: 3rem;
+    }
+
+    .singleBook-details,
+    .singleBook-reviews {
+      line-height: 1.7;
+    }
+
+    .singleBook-title {
+      margin-top: 2.5rem;
+      font-size: 2rem;
+      line-height: 1.4;
+    }
+
+    .singleBook-heading {
+      margin-top: 1.2rem;
+      margin-bottom: 1rem;
+    }
+
+    .singleBook-span {
+      font-weight: bold;
+    }
+
+    .singleBook-show-hide-text {
+      font-weight: bold;
+      font-size: 1.5rem;
+      color: #4c321d;
+      border-bottom: 2px solid #7e4e1f;
+      cursor: pointer;
+      padding: 0 2px;
+    }
+
+    .singleBook-review-text {
+      margin-bottom: 1.5rem;
+    }
+
+    @media only screen and (min-width: 650px) {
+      .singleBook-page {
+        margin-top: 8rem;
+        display: grid;
+        grid-template-areas:
+          'bookCover details '
+          'forms details'
+          'reviews reviews ';
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto auto;
+        grid-column-gap: 1.5rem;
+      }
+      .bookcard-and-btns-container {
+        grid-area: bookCover;
+      }
+      .singleBook-admin-forms {
+        grid-area: forms;
+      }
+      .singleBook-details {
+        grid-area: details;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .singleBook-title {
+        margin-top: 0;
+      }
+      .singleBook-reviews {
+        grid-area: reviews;
+        margin: 3rem 3rem;
+      }
+      #singleBook-reset-margin {
+        margin-left: 0;
+      }
+      #singleBook-reset-margin-forms {
+        margin-left: 0;
+      }
+    }
+
+    @media only screen and (min-width: 768px) {
+      .singleBook-page {
+        grid-column-gap: 2.5rem;
+      }
+      #singleBook-reset-margin {
+        margin-left: 3rem;
+      }
+      #singleBook-reset-margin-forms {
+        margin-left: 3rem;
+      }
+    }
+
+    @media only screen and (min-width: 1080px) {
+      .singleBook-page {
+        grid-template-columns: auto auto;
+        grid-column-gap: 4rem;
+      }
+      .singleBook-reviews {
+        margin: 3rem 5rem;
+      }
+      #singleBook-reset-margin {
+        margin-left: 4rem;
+      }
+      #singleBook-reset-margin-forms {
+        margin-left: 4rem;
+      }
+    }
+    template-columns: auto auto;
     grid-column-gap: 4rem;
   }
   .singleBook-reviews {
