--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,17 @@ a {
     font-size: 1.5rem;
   }
 }
+
+.continue-button {
+  border: 0;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 5px 15px;
+  color: #f6f5f3;
+  cursor: pointer;
+  padding: 5px 8px 7px 8px;
+
+  background-image: linear-gradient(#d59352, #7e4e1f);
+}
+.continue-button:hover {
+  background-image: linear-gradient(#d0ae94, #4c321d);
+}
