--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -44,6 +44,10 @@
     font-size: 1.6rem;
 }
 
+.register-form input {
+    background-color: #fff;
+}
+
 @media screen and (min-width: 1000px) {
     .firstName-input,
     .lastName-input,
