--- a/src/components/bookCard/bookCard.css
+++ b/src/components/bookCard/bookCard.css
@@ -1,7 +1,6 @@
 .bookCard-container {
   width: 28rem;
   height: 45rem;
-  margin-bottom: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,7 +16,11 @@
 }
 
 .bookCard-title {
-  font-size: 2rem;
+  color: #0a0e10;
+  font-family: 'Montserrat_Alternates';
+  font-weight: 700;
+  font-size: 1.9rem;
+  font-size: 1.8rem;
   line-height: 1.2;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
