--- a/src/pages/singleBook/singleBook.css
+++ b/src/pages/singleBook/singleBook.css
@@ -6,6 +6,7 @@
 .singleBook-details,
 .singleBook-reviews {
   line-height: 1.7;
+  border: 1px solid red;
 }
 
 .singleBook-title {
@@ -45,6 +46,8 @@
       'forms details'
       'reviews reviews ';
     grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto;
+    grid-template-rows: auto auto;
     grid-template-columns: auto auto;
     grid-column-gap: 1.5rem;
   }
