--- a/src/App.css
+++ b/src/App.css
@@ -18,19 +18,22 @@ header {
   color: #0a0e10;
 }
 
+.shop-logo {
+  font-weight: 400;
+  font-family: 'Great_Vibes';
+  letter-spacing: 1px;
+  font-size: 2.2rem;
+  color: #263238;
+  text-shadow: #90a4ae 1px 0 10px;
+}
+
 .logos {
   font-weight: 400;
 }
 
-/* .logo-ul {
-  padding-left: 2.5rem;
+.logo-ul {
   padding-left: 2rem;
-  font-family: 'Great_Vibes';
-  letter-spacing: 1px;
-  font-size: 2.3rem;
-  color: #263238;
-  text-shadow: #90a4ae 1px 0 10px;
-} */
+}
 
 .menu {
   margin-right: 2.5rem;
@@ -65,15 +68,6 @@ header {
   text-decoration: none;
   font-size: 1.6rem;
 }
-.logo-ul {
-  padding-left: 2.5rem;
-  padding-left: 2rem;
-  font-family: 'Great_Vibes';
-  letter-spacing: 1px;
-  font-size: 2.3rem;
-  color: #263238;
-  text-shadow: #90a4ae 1px 0 10px;
-}
 
 .search-btn {
   border: none;
@@ -102,7 +96,7 @@ footer {
   font-family: 'Great_Vibes';
   letter-spacing: 1px;
   font-size: 1.6rem;
-  line-height: 1;
+  line-height: 0.9;
   color: #263238;
   text-shadow: #90a4ae 1px 0 10px;
   margin-left: 0.5rem;
@@ -140,8 +134,9 @@ footer {
   .app-nav-modal {
     display: none;
   }
-  .logo-ul {
-    font-size: 2.6rem;
+
+  .shop-logo {
+    font-size: 2.7rem;
     padding-left: 2.5rem;
   }
   .search-input {
