--- a/src/pages/books/books.css
+++ b/src/pages/books/books.css
@@ -1,10 +1,10 @@
 .books-genres-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 5rem;
+  grid-column-gap: 3rem;
   grid-row-gap: 0.5rem;
-  margin: 0 1rem;
-  padding-top: 2.5rem;
+  margin-bottom: 5rem;
+  padding-top: 2rem;
 }
 
 .books-genres-container .books-genre-name {
