--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,18 @@ footer {
   font-size: 1.6rem;
 }
 
+/*600*/
+@media screen and (min-width: 600px) {
+  .search-input {
+    width: 30rem;
+  }
+}
+
 /*1000*/
 @media screen and (min-width: 1000px) {
   .desktop-links {
     font-size: 1.2rem;
-    gap: 0.5rem;
+    gap: 5rem;
     padding-right: 2.5rem;
     flex-direction: row;
     display: flex;
@@ -141,5 +148,12 @@ footer {
   }
   .search-input {
     width: 25rem;
+  }
+}
+
+/*1400*/
+@media screen and (min-width: 1400px) {
+  .search-input {
+    width: 40rem;
   }
 }
